# jetbrains-internship-word2vec

./: .gitignore  README.md  exploration.ipynb  main.py  pyproject.toml
word2vec/: data.py  model.py  train.py
